k8s/deployment.yaml
#Deplooyment app

apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-petclinic
spec:
  selector:
    matchLabels:
      app: spring-petclinic
  template:
    metadata:
      labels:
        app: spring-petclinic
    spec:  
      containers:
      - name: spring-petclinic
        image: tallesalencar/spring-petclinic:latest
        ports:
        - containerPort: 8080
---

apiVersion: v1
kind: Service
metadata:
  name: spring-petclinic
spec:
  selector:
    app: spring-petclinic
  ports:
  - port: 80
    targetPort: 8080
    nodePort: 30000
  type: LoadBalancer
