k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pages-ingress
spec:
  rules:
    - host: nome
      http:
        paths: 
        - path: "/"
          pathType: Prefix
          backend:
            service: 
              name: spring-petclinic
              port:
              number: 80
